metadata-classic/objects/CSAT__c.object
<CustomObject>
    <fields>
        <fullName>OfferResponseDate__c</fullName>
        <description>The date/time the survey was completed.</description>
        <label>Offer Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OfferResponseDateminusone__c</fullName>
        <description>Used specifically in the CSAT list views that contain &quot;This Week&quot; and &quot;Last Week&quot; in the list view name. This formula field is used instead of Offer Response Date in the list views in order to manipulate the date ranges so that the list views can use the standard THIS WEEK and LAST WEEK filter parameters, since Salesforce considers a weekly range Sun to Sat, and Thumbtack uses Mon to Sun.</description>
        <formula>OfferResponseDate__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Response Date (Minus One)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutcomeExpectations__c</fullName>
        <description>Field to store the response to the MI CSat survey question: The outcome of the issue met my expectations.</description>
        <inlineHelpText>The outcome of the issue met my expectations.</inlineHelpText>
        <label>Outcome Expectations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutcomeWasFair__c</fullName>
        <description>Field to store the response to the MI CSat survey question: The outcome was fair to all parties involved.</description>
        <inlineHelpText>The outcome was fair to all parties involved.</inlineHelpText>
        <label>Outcome was Fair</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerFirstName__c</fullName>
        <description>Formula field that brings over the Survey Response Owner&apos;s first name. Used in email templates sent from the Survey Response object.</description>
        <formula>Owner:User.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerHandleFirstName__c</fullName>
        <description>Formula field to display the CSAT Owner&apos;s Handle Name from their user record; used in email templates.</description>
        <formula>IF(ISBLANK(Owner:User.HandleFirstName__c),Owner:User.FirstName,Owner:User.HandleFirstName__c)</formula>
        <label>Owner Handle First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerLastName__c</fullName>
        <description>Formula field to bring over the CSAT Owner&apos;s last name; used in merge field URL parameter to survey tool (for data analysis).</description>
        <formula>Owner:User.LastName</formula>
        <label>Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAOnboardingAgentClarity__c</fullName>
        <inlineHelpText>They set proper expectations and were clear about next steps</inlineHelpText>
        <label>IM Onboarding Agent Clarity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAOnboardingAgentCommunication__c</fullName>
        <inlineHelpText>They were professional and communicated clearly</inlineHelpText>
        <label>IM Onboarding Agent Communication</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAOnboardingAgentFollowthrough__c</fullName>
        <inlineHelpText>They followed through on promises made</inlineHelpText>
        <label>IM Onboarding Agent Followthrough</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAOnboardingAgentKnowledge__c</fullName>
        <inlineHelpText>They were knowledgeable about Thumbtack Instant Match</inlineHelpText>
        <label>IM Onboarding Agent Knowledge</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAOnboardingAgent__c</fullName>
        <inlineHelpText>They took the time to understand my business</inlineHelpText>
        <label>IM Onboarding Agent Time</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAOnboardingEasy__c</fullName>
        <inlineHelpText>It took a reasonable amount of time to get set up on Thumbtack Instant Match</inlineHelpText>
        <label>IM Onboarding Ease</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAOnboardingProgramConfidence__c</fullName>
        <inlineHelpText>I feel confident Thumbtack will be able to quote on my behalf with the information I provided during setup</inlineHelpText>
        <label>IM Onboarding Program Confidence</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAOnboardingQuoteSatisfaction__c</fullName>
        <inlineHelpText>Are you satisfied with the quality of the quotes we sent on your behalf?</inlineHelpText>
        <label>IM Onboarding Quote Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAOnboardingReachability__c</fullName>
        <inlineHelpText>I could reach Thumbtack when I had questions or problems with my setup</inlineHelpText>
        <label>IM Onboarding Reachability</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAOnboardingSetupSatisfaction__c</fullName>
        <inlineHelpText>How satisfied are you with the Instant Match setup experience overall?</inlineHelpText>
        <label>IM Onboarding Setup Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neither satisfied nor dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Very dissatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAOnboarding__c</fullName>
        <inlineHelpText>It took a reasonable amount of time to get set up on Thumbtack Instant Match</inlineHelpText>
        <label>IM Onboarding Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAQuotingIssues__c</fullName>
        <description>Which aspects of the quotes did not meet your expectations?</description>
        <label>IM Quoting Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quoted price</fullName>
                </value>
                <value>
                    <fullName>Quote message is wrong</fullName>
                </value>
                <value>
                    <fullName>Thumbtack quoted on a project that isn&apos;t a fit for your business</fullName>
                </value>
                <value>
                    <fullName>Thumbtack quoted on a project that is not aligned with your travel preferences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProAssistSignupSource__c</fullName>
        <inlineHelpText>How did you first learn about Thumbtack Instant Match?</inlineHelpText>
        <label>Instant Match Signup Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>An email from Thumbtack</fullName>
                </value>
                <value>
                    <fullName>A notification in the Thumbtack app or online</fullName>
                </value>
                <value>
                    <fullName>A phone call from Thumbtack</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProCustomerAdditionalFeedback__c</fullName>
        <description>Open text area for the engagement specialist to enter in any additional feedback provided by the Pro/Customer during the negative CSAT review call.</description>
        <inlineHelpText>Additional feedback provided by the Pro/Customer during the negative CSAT review call.</inlineHelpText>
        <label>Pro/Customer Additional Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <description>Field to store the response to the MI CSat survey question: They were professional and communicated clearly.</description>
        <inlineHelpText>They were professional and communicated clearly.</inlineHelpText>
        <label>Professionalism</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReasonForNegativeCSAT__c</fullName>
        <description>Picklist of values to indicate the reason for the negative feedback.</description>
        <label>Reason for Negative CSAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint about Pro/Customer</fullName>
                </value>
                <value>
                    <fullName>Customer suggestions</fullName>
                </value>
                <value>
                    <fullName>Data advertised</fullName>
                </value>
                <value>
                    <fullName>Filtering / Sorting Quotes</fullName>
                </value>
                <value>
                    <fullName>Filtering / Sorting Requests</fullName>
                </value>
                <value>
                    <fullName>Landing pages / spotlight</fullName>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payment Methods</fullName>
                </value>
                <value>
                    <fullName>Phone Apps</fullName>
                </value>
                <value>
                    <fullName>Polish - Grammar/Spelling/Layout</fullName>
                </value>
                <value>
                    <fullName>Positive Feedback</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Profile credentials (background checks, licenses)</fullName>
                </value>
                <value>
                    <fullName>Profile Social Media links</fullName>
                </value>
                <value>
                    <fullName>Pro wants feedback from customers</fullName>
                </value>
                <value>
                    <fullName>Quality of Leads</fullName>
                </value>
                <value>
                    <fullName>Quote Flow</fullName>
                </value>
                <value>
                    <fullName>Refund/Credit dispute</fullName>
                </value>
                <value>
                    <fullName>Requests</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
                <value>
                    <fullName>Site expansion</fullName>
                </value>
                <value>
                    <fullName>Suggested Questions</fullName>
                </value>
                <value>
                    <fullName>Support / Help Pages</fullName>
                </value>
                <value>
                    <fullName>Thumbtack Specialist</fullName>
                </value>
                <value>
                    <fullName>Travel Preferences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonableAmountofTimetoResolve__c</fullName>
        <description>Field to store the response to the MI CSat survey question: It took a reasonable amount of time to handle the issue.</description>
        <inlineHelpText>It took a reasonable amount of time to handle the issue.</inlineHelpText>
        <label>Reasonable Amount of Time to Resolve</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportingManagerEmail__c</fullName>
        <description>Formula field to display the users reporting manager&apos;s email.</description>
        <label>Reporting Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ReportingManager__c</fullName>
        <description>Formula field to display the users reporting manager.</description>
        <formula>User__r.Manager.FirstName &amp;&quot; &quot;&amp; User__r.Manager.LastName</formula>
        <label>Reporting Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolutionDetails__c</fullName>
        <description>Open text area for the engagement specialist to add details regarding Thumbtack&apos;s ability or inability to solve the issue.</description>
        <inlineHelpText>Details regarding Thumbtack&apos;s ability or inability to solve the issue.</inlineHelpText>
        <label>Resolution Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResolvedOnCallback__c</fullName>
        <description>Picklist field to indicate if the engagement specialist was able to improve the situation from the negative CSAT.</description>
        <label>Resolved on Callback</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewMentions__c</fullName>
        <description>Picklist of values used to further describe the reason for negative CSAT.</description>
        <label>Review Mentions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Driven - Conduct</fullName>
                </value>
                <value>
                    <fullName>Agent Driven - Incomplete Information</fullName>
                </value>
                <value>
                    <fullName>Agent Driven - Misinformation</fullName>
                </value>
                <value>
                    <fullName>Agent Driven - No/Late Follow-up</fullName>
                </value>
                <value>
                    <fullName>App Specific - Android</fullName>
                </value>
                <value>
                    <fullName>App Specific - iOS</fullName>
                </value>
                <value>
                    <fullName>Blank/Not enough info email</fullName>
                </value>
                <value>
                    <fullName>Credit refund dispute</fullName>
                </value>
                <value>
                    <fullName>Credits versus Points</fullName>
                </value>
                <value>
                    <fullName>Customer Driven - Conduct</fullName>
                </value>
                <value>
                    <fullName>Customer Driven - Message for Pro</fullName>
                </value>
                <value>
                    <fullName>Customer Driven - Negative Review</fullName>
                </value>
                <value>
                    <fullName>Customer Driven - No Payment</fullName>
                </value>
                <value>
                    <fullName>Customer Driven - No Reply to Pro</fullName>
                </value>
                <value>
                    <fullName>Customer Driven - No Response to Request</fullName>
                </value>
                <value>
                    <fullName>Customer Driven - Other</fullName>
                </value>
                <value>
                    <fullName>Feedback Implementation</fullName>
                </value>
                <value>
                    <fullName>Macro - Generic/Unrelated</fullName>
                </value>
                <value>
                    <fullName>MI - Investigation/Other</fullName>
                </value>
                <value>
                    <fullName>MI - Removal</fullName>
                </value>
                <value>
                    <fullName>Mistake</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Product - Bugs</fullName>
                </value>
                <value>
                    <fullName>Product - Landing Page</fullName>
                </value>
                <value>
                    <fullName>Product - License</fullName>
                </value>
                <value>
                    <fullName>Product - Other</fullName>
                </value>
                <value>
                    <fullName>Product - Policy (General)</fullName>
                </value>
                <value>
                    <fullName>Product - Pricing</fullName>
                </value>
                <value>
                    <fullName>Product - Request Form</fullName>
                </value>
                <value>
                    <fullName>Product - Review Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewedByDate__c</fullName>
        <description>The date the DSAT was reviewed by a team member.</description>
        <label>Reviewed By Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to indicate the team member who reached out to the customer or pro regarding negative feedback.</description>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSATs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SetProperExpectationsComment__c</fullName>
        <description>[Agent Name] set clear expectations, comments.</description>
        <inlineHelpText>[Agent Name] set clear expectations, comments.</inlineHelpText>
        <label>Set Proper Expectations Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SetProperExpectations__c</fullName>
        <description>They set proper expectations and were clear about next steps.</description>
        <inlineHelpText>They set proper expectations and were clear about next steps.</inlineHelpText>
        <label>Set Proper Expectations</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SetupCompletionType__c</fullName>
        <inlineHelpText>How did you complete the setup process?</inlineHelpText>
        <label>Setup Completion Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I completed it myself using the Thumbtack app/website</fullName>
                </value>
                <value>
                    <fullName>A Thumbtack Support Specialist walked me through the process on the phone</fullName>
                </value>
                <value>
                    <fullName>Both of the above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialistConnection__c</fullName>
        <description>Open text area to allow the engagement specialist to enter comments surrounding the Thumbtack Specialist performance and connection with the Pro/Customer.</description>
        <inlineHelpText>Details of the Thumbtack Specialists performance and connection with the Pro/Customer.</inlineHelpText>
        <label>Specialist Connection</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist of values to indicate the status of the survey offering.</description>
        <label>Offer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <color>#0B6FCE</color>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Offered</fullName>
                    <color>#78C953</color>
                    <label>Offered</label>
                </value>
                <value>
                    <fullName>Responded</fullName>
                    <color>#FF9900</color>
                    <label>Responded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SurveyInfo__c</fullName>
        <description>This is for the survey details, like the survey name and survey version.</description>
        <label>Survey Info</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Text field to indicate the CSAT owner&apos;s assigned team.  Populated via a process/workflow.</description>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempIncidentAccount__c</fullName>
        <formula>IF(OR(
         AND(NOT ISBLANK(Case__r.Incident__c),
                NOT ISBLANK(Case__r.Incident__r.ProAccount__c),
                Case__r.Incident__r.ProAccount__r.Id = Case__r.AccountId), 
           AND(NOT ISBLANK(Case__r.Incident__c),
                   NOT ISBLANK(Case__r.Incident__r.ProID__c),
                   Case__r.Incident__r.ProID__c = TEXT(Case__r.Account.usr_user_id__c))), &apos;Pro match&apos;, 
IF(AND(NOT ISBLANK(Case__r.Incident__c),
           NOT ISBLANK(Case__r.Incident__r.CustomerID__c),
           Case__r.Incident__r.CustomerID__c = TEXT(Case__r.Account.usr_user_id__c)), &apos;Customer match&apos;,
&apos;No match&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TempIncidentAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserID__c</fullName>
        <description>The Thumbtack User Id of the person who filled out the survey.</description>
        <label>Thumbtack User ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserPhone__c</fullName>
        <description>Phone number of the associated contact.  Populated via a workflow rule.</description>
        <label>Thumbtack User Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ThumbtackUser__c</fullName>
        <description>Formula to present non-clickable contact information.</description>
        <formula>IF(
NOT(ISBLANK( Account__c )),Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName &amp; &quot; with &quot; &amp; Contact__r.Account.Name,
Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName
)</formula>
        <label>Thumbtack User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbtackValue__c</fullName>
        <description>Picklist field to display the Thumbtack values that the specialist could improve on based on the negative CSAT review.</description>
        <inlineHelpText>Thumbtack value that the specialist could improve on based on the negative CSAT review.  High-five if no improvement needed (e.g., the bad CSAT was tied to a product issue and not agent performance).</inlineHelpText>
        <label>Thumbtack Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
                <value>
                    <fullName>Super-Helpful</fullName>
                </value>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Dependable</fullName>
                </value>
                <value>
                    <fullName>Encouraging</fullName>
                </value>
                <value>
                    <fullName>High-Five</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TookTimetoUnderstandIssue__c</fullName>
        <description>Field used to store the response from the MI CSAT survey question: They took the time to understand my issue.</description>
        <inlineHelpText>They took the time to understand my issue.</inlineHelpText>
        <label>Took Time to Understand Issue</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToolsandInfoAvailable__c</fullName>
        <description>Field to store the response to the MI CSat survey question: The tools and information were available for me to handle the issue.</description>
        <inlineHelpText>The tools and information were available for me to handle the issue.</inlineHelpText>
        <label>Tools and Info Available</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User whom this survey response is regarding</description>
        <inlineHelpText>The user whom this survey response is regarding</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitedHelpCenter__c</fullName>
        <description>Did you visit our Help Center before contacting support?
Yes
No</description>
        <label>Visited Help Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSAT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ThumbtackUser__c</columns>
        <columns>Case__c</columns>
        <columns>CaseCategory__c</columns>
        <columns>CaseSubcategory__c</columns>
        <columns>User__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>CSATIcon__c</columns>
        <columns>CSATResponse__c</columns>
        <columns>CSATComments__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OfferDate__c</columns>
        <columns>OfferResponseDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllLTCLast28Days</fullName>
        <columns>NAME</columns>
        <columns>LTCIcon__c</columns>
        <columns>LikelihoodToUseTTAgain__c</columns>
        <columns>LikelihoodToUseTTAgainComment__c</columns>
        <columns>User__c</columns>
        <columns>ReportingManager__c</columns>
        <columns>OfferDate__c</columns>
        <columns>OfferResponseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSAT__c.CustomerSatisfaction,CSAT__c.MarketplaceIntegrityCSAT</value>
        </filters>
        <filters>
            <field>LikelihoodToUseTTAgain__c</field>
            <operation>equals</operation>
            <value>5,4,3,2,1</value>
        </filters>
        <filters>
            <field>OfferResponseDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:28</value>
        </filters>
        <label>All LTC - Last 28 Days</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
            <role>MIManagingUser</role>
            <role>ProServicesManaging_User</role>
            <role>SAM_Managing_User</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllLTCLast7Days</fullName>
        <columns>NAME</columns>
        <columns>LTCIcon__c</columns>
        <columns>LikelihoodToUseTTAgain__c</columns>
        <columns>LikelihoodToUseTTAgainComment__c</columns>
        <columns>User__c</columns>
        <columns>ReportingManager__c</columns>
        <columns>OfferDate__c</columns>
        <columns>OfferResponseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSAT__c.CustomerSatisfaction,CSAT__c.MarketplaceIntegrityCSAT</value>
        </filters>
        <filters>
            <field>LikelihoodToUseTTAgain__c</field>
            <operation>equals</operation>
            <value>5,4,3,2,1</value>
        </filters>
        <filters>
            <field>OfferResponseDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All LTC - Last 7 Days</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
            <role>MIManagingUser</role>
            <role>ProServicesManaging_User</role>
            <role>SAM_Managing_User</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllLTCToday</fullName>
        <columns>NAME</columns>
        <columns>LTCIcon__c</columns>
        <columns>LikelihoodToUseTTAgain__c</columns>
        <columns>LikelihoodToUseTTAgainComment__c</columns>
        <columns>User__c</columns>
        <columns>ReportingManager__c</columns>
        <columns>OfferDate__c</columns>
        <columns>OfferResponseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSAT__c.CustomerSatisfaction,CSAT__c.MarketplaceIntegrityCSAT</value>
        </filters>
        <filters>
            <field>LikelihoodToUseTTAgain__c</field>
            <operation>equals</operation>
            <value>5,4,3,2,1</value>
        </filters>
        <filters>
            <field>OfferResponseDate__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All LTC - Today</label>
        <sharedTo>
            <role>CSManagingUserTPH</role>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
            <role>MIManagingUser</role>
            <role>ProServicesManaging_User</role>
            <role>SAM_Managing_User</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ArticleFeedbackLast30Days</fullName>
        <columns>NAME</columns>
        <columns>KBArticleTitle__c</columns>
        <columns>KBArticleVersionId__c</columns>
        <columns>CSATResponse__c</columns>
        <columns>KBArticleImprovementReason__c</columns>
        <columns>CSATComments__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSAT__c.KBArticleCSAT</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>03. Article Feedback: Last 30 Days</label>
        <sharedTo>
            <group>ContentUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ArticleFeedbackThisWeek</fullName>
        <columns>NAME</columns>
        <columns>KBArticleTitle__c</columns>
        <columns>KBArticleVersionId__c</columns>
        <columns>CSATResponse__c</columns>
        <columns>KBArticleImprovementReason__c</columns>
        <columns>CSATComments__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CSAT__c.KBArticleCSAT</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>02. Article Feedback: This Week</label>
        <sharedTo>
            <group>ContentUser</group>
        </sharedTo>
    </listViews>
</CustomObject>